--- a/sucursales.html
+++ b/sucursales.html
@@ -9,8 +9,8 @@
 <body>
 <div class="container">
  <nav class="nav-main">
-	<img src="logoquedate.PNG" alt="battery logo" class="nav-brand">
-	<img src="logo.PNG" alt="logo" class="logo">
+	<img src="logoquedate.png" alt="battery logo" class="nav-brand">
+	<img src="logo.png" alt="logo" class="logo">
 		<ul class="nav-menu show">
 		<li>
 			<a href="index.html">Inicio</a>
